inyoka_theme_default/static/style/inyoka/planet.less
/**
 * style.inyoka.planet
 * ~~~~~~~~~~~~~~~~~~~
 *
 * Custom styles for the planet. All css-classes are prefixed with `planet-`.
 *
 * :copyright: (c) 2013-2016 by the Inyoka Team, see AUTHORS for more details.
 * :license: BSD, see LICENSE for more details.
 */

.planet {
  &-newestarticles {
    @media (min-width: @screen-sm-min) {
      &-list {
        columns: 2;
        column-gap: 4em;
      }
    }
  }
  &-bloglist {
    &:extend(.table all);
    &:extend(.table-striped all);

    @media (max-width: @screen-xs-max) {
      thead {display:none;}
      tr {
        display:block;
        clear:both;
        width:100%;
        height:auto;
        border-top:1px solid @gray-lighter;
        margin:15px 0;
      }
      td {
        display: block;
        float:left;
        width:50%;
        border:0;
      }
      td:before {
        display: inline-block;
        width: auto;
        padding-right: 10px;
        white-space: nowrap;
        content: attr(data-title)':';
      }

      tr:after {
        display: block;
        clear:both;
      }
    }
    @media (min-width: @screen-md-min) {
      .namecol {width:35%;}
      .usercol {width:30%;}
      .updatecol {width:30%;}
      .activecol {width:5%;}
    }
    @media (min-width: @screen-lg-min) {
      .namecol {width:40%;}
      .usercol {width:30%;}
      .updatecol {width:25%;}
      .activecol {width:5%;}
    }
  }
  &-article {
    .article();

    &-footer {
      &:extend(.list-inline all);
      margin: 0;
    }

    .blog-icon-container{
      font-size: 400%;
      vertical-align: middle;
      text-align: center;
      color: @gray-light;
      max-height: @planet-icon-size;
      max-width: @planet-icon-size;
      padding: 0;

      a {
        color: inherit;
      }
    }

    img {
      max-width: 100% !important;
      
      /* `!important` needed as width and height are sometimes inline
          defined (→ wrong form-factor if scaled) */
      height: auto !important;
      width: auto !important;
    }

    table {
      table-layout: fixed;
      width: 100%;
    }
  }
}

